Perma windows dom/media/test/reftest/color_quads/720p.png.bt709.bt709.tv.yuv420p.h264.mp4 == dom/media/test/reftest/color_quads/720p.png.bt709.bt709.tv.yuv420p.av1.webm | single tracking bug
Categories
(Core :: Audio/Video: Playback, defect)
Tracking
()
| Tracking | Status | |
|---|---|---|
| firefox-esr115 | --- | unaffected |
| firefox120 | --- | unaffected |
| firefox121 | --- | fixed |
| firefox122 | --- | fixed |
People
(Reporter: intermittent-bug-filer, Assigned: sotaro)
References
(Regression)
Details
(Keywords: intermittent-failure, intermittent-testcase, regression)
Attachments
(1 file)
|
48 bytes,
text/x-phabricator-request
|
RyanVM
:
approval-mozilla-beta+
|
Details | Review |
Filed by: csabou [at] mozilla.com
Parsed log: https://treeherder.mozilla.org/logviewer?job_id=436674263&repo=autoland
Full log: https://firefox-ci-tc.services.mozilla.com/api/queue/v1/task/F1FfPxnkTZm3FUS50xFrNw/runs/0/artifacts/public/logs/live_backing.log
Reftest URL: https://hg.mozilla.org/mozilla-central/raw-file/tip/layout/tools/reftest/reftest-analyzer.xhtml#logurl=https://firefox-ci-tc.services.mozilla.com/api/queue/v1/task/F1FfPxnkTZm3FUS50xFrNw/runs/0/artifacts/public/logs/live_backing.log&only_show_unexpected=1
[task 2023-11-17T19:43:29.709Z] 19:43:29 INFO - REFTEST TEST-PASS | dom/media/test/reftest/color_quads/720p.png.bt709.bt709.tv.yuv420p.av1.mp4 == dom/media/test/reftest/color_quads/720p.png.bt709.bt709.tv.yuv420p.av1.webm | image comparison, max difference: 0, number of differing pixels: 0
[task 2023-11-17T19:43:29.709Z] 19:43:29 INFO - REFTEST TEST-END | dom/media/test/reftest/color_quads/720p.png.bt709.bt709.tv.yuv420p.av1.mp4 == dom/media/test/reftest/color_quads/720p.png.bt709.bt709.tv.yuv420p.av1.webm
[task 2023-11-17T19:43:29.750Z] 19:43:29 INFO - REFTEST TEST-START | dom/media/test/reftest/color_quads/720p.png.bt709.bt709.tv.yuv420p.h264.mp4 == dom/media/test/reftest/color_quads/720p.png.bt709.bt709.tv.yuv420p.av1.webm
[task 2023-11-17T19:43:29.750Z] 19:43:29 INFO - REFTEST TEST-LOAD | file:///Z:/task_170024520130630/build/tests/reftest/tests/dom/media/test/reftest/reftest_video.html?src=color_quads/720p.png.bt709.bt709.tv.yuv420p.h264.mp4 | 3 / 29 (10%)
[task 2023-11-17T19:43:30.027Z] 19:43:30 INFO - REFTEST TEST-LOAD | file:///Z:/task_170024520130630/build/tests/reftest/tests/dom/media/test/reftest/reftest_video.html?src=color_quads/720p.png.bt709.bt709.tv.yuv420p.av1.webm | 3 / 29 (10%)
[task 2023-11-17T19:43:30.111Z] 19:43:30 INFO - JavaScript error: resource://gre/actors/PictureInPictureChild.sys.mjs, line 348: TypeError: can't access dead object
[task 2023-11-17T19:43:30.327Z] 19:43:30 INFO - REFTEST INFO | REFTEST fuzzy test (0, 75) <= (20, 5694) <= (16, 1941)
[task 2023-11-17T19:43:30.626Z] 19:43:30 INFO - REFTEST TEST-UNEXPECTED-FAIL | dom/media/test/reftest/color_quads/720p.png.bt709.bt709.tv.yuv420p.h264.mp4 == dom/media/test/reftest/color_quads/720p.png.bt709.bt709.tv.yuv420p.av1.webm | image comparison, max difference: 20, number of differing pixels: 5694
[task 2023-11-17T19:43:30.628Z] 19:43:30 INFO - REFTEST TEST-END | dom/media/test/reftest/color_quads/720p.png.bt709.bt709.tv.yuv420p.h264.mp4 == dom/media/test/reftest/color_quads/720p.png.bt709.bt709.tv.yuv420p.av1.webm
[task 2023-11-17T19:43:30.628Z] 19:43:30 INFO - REFTEST TEST-START | dom/media/test/reftest/color_quads/720p.png.bt709.bt709.tv.yuv420p.vp9.mp4 == dom/media/test/reftest/color_quads/720p.png.bt709.bt709.tv.yuv420p.av1.webm
[task 2023-11-17T19:43:30.629Z] 19:43:30 INFO - REFTEST TEST-LOAD | file:///Z:/task_170024520130630/build/tests/reftest/tests/dom/media/test/reftest/reftest_video.html?src=color_quads/720p.png.bt709.bt709.tv.yuv420p.vp9.mp4 | 4 / 29 (13%)
[task 2023-11-17T19:43:30.842Z] 19:43:30 INFO - REFTEST TEST-LOAD | file:///Z:/task_170024520130630/build/tests/reftest/tests/dom/media/test/reftest/reftest_video.html?src=color_quads/720p.png.bt709.bt709.tv.yuv420p.av1.webm | 4 / 29 (13%)
[task 2023-11-17T19:43:31.144Z] 19:43:31 INFO - REFTEST INFO | REFTEST fuzzy test (0, 0) <= (0, 0) <= (20, 5620)
Comment 1•2 years ago
•
|
||
This has been hiding on windows since Bug 1863630 occurred but actually started with Bug 1859432 here.
| Assignee | ||
Updated•2 years ago
|
| Comment hidden (Intermittent Failures Robot) |
| Assignee | ||
Comment 3•2 years ago
|
||
The failure happened with asan build.
| Assignee | ||
Comment 4•2 years ago
|
||
| Assignee | ||
Comment 5•2 years ago
|
||
It seemed that the failure is addressed.
https://treeherder.mozilla.org/jobs?repo=try&revision=946928eb2d2966707d9f4dcca231cda7c6983215
Comment 7•2 years ago
|
||
Set release status flags based on info from the regressing bug 1859432
Comment 8•2 years ago
|
||
| bugherder | ||
Comment 9•2 years ago
|
||
The patch landed in nightly and beta is affected.
:sotaro, is this bug important enough to require an uplift?
- If yes, please nominate the patch for beta approval.
- If no, please set
status-firefox121towontfix.
For more information, please visit BugBot documentation.
| Assignee | ||
Updated•2 years ago
|
| Comment hidden (Intermittent Failures Robot) |
| Assignee | ||
Comment 11•2 years ago
|
||
Comment on attachment 9364648 [details]
Bug 1865426 - Enable uploading to NV12 ID3D11Texture2D with WebRender(Software D3D11)
Beta/Release Uplift Approval Request
- User impact if declined: Software decoded video becomes green when NV12 is not supported like Bug 1864618 and Bug 1865928.
- Is this code covered by automated tests?: Yes
- Has the fix been verified in Nightly?: Yes
- Needs manual test from QE?: No
- If yes, steps to reproduce:
- List of other uplifts needed: none
- Risk to taking this patch: Low
- Why is the change risky/not risky? (and alternatives if risky): The change is mainly a change in the location of an existing code.
- String changes made/needed: none
- Is Android affected?: No
Comment 12•2 years ago
|
||
Comment on attachment 9364648 [details]
Bug 1865426 - Enable uploading to NV12 ID3D11Texture2D with WebRender(Software D3D11)
Approved for 121.0b6.
Comment 13•2 years ago
|
||
| uplift | ||
Updated•2 years ago
|
| Comment hidden (Intermittent Failures Robot) |
Description
•