Bug 1865426 - Enable uploading to NV12 ID3D11Texture2D with WebRender (Software D3D11). r=gfx-reviewers,lsalzman a=RyanVM

With the change, yuv BufferTexture is uploaded to D3D11 NV12 texture also if webrender supports D3D11 and NV12.

Calling GpuProcessD3D11TextureMap::GetTexture() is changed from RenderDXGITextureHost::EnsureD3D11Texture2DWithGL() to RenderDXGITextureHost::EnsureD3D11Texture2D(), since the EnsureD3D11Texture2DWithGL() is not called with WebRender(Software D3D11).

Differential Revision: https://phabricator.services.mozilla.com/D194171